Added code to handle isotopic atoms to fix 2777494.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@2977 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-21  Chris Morley <c.morley@gaseq.co.uk>
+
+	* src/alias.cpp: Added code to handle isotopic atoms to fix 2777494
+
 2009-04-16  Chris Morley <c.morley@gaseq.co.uk>
 
 	* include/openbabel/reaction.h, src/formats/rsmiformat.cpp,
