Remove some metallic elements from IMPVAL to prevent them getting implicit H
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3026 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 2009-04-21  Chris Morley <c.morley@gaseq.co.uk>
+	* data/atomtyp.txt: removed alkalis, alkaline earths,
+	In,Tl,Sn,Pb,Sb,Bi from IMPVAL list. (Elements with IMPVAL entries
+	are given implicit hydrogens.) Corrects problem Fredrik Wallner
+	had with Na.
+	Also some others, incl S- to fix #2782327
+	
+2009-04-21  Chris Morley <c.morley@gaseq.co.uk>
 
 	* src/alias.cpp: Added code to handle isotopic atoms to fix 2777494
 
