Correct compile errors
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3116 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-06-27  Chris Morley <c.morley@gaseq.co.uk>
 
+	* src/formats/smilesformat.cpp,
+	windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj
+	windows-vc2005/OBUtilFormats/OBUtilFormats.vcproj:
+	remove contamination from experimental version so that compiles again.
+
+2009-06-27  Chris Morley <c.morley@gaseq.co.uk>
+
 	Make parsing of SMILES files stricter, following discussion on
 	mailing list.
 	* src/formats/smilesformat.cpp(Read Molecule):
