Fix for OBConversion crashes in multithreaded environments
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3632 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-10  Matt Sprague  <mesprague@gmail.com>
+
+	* src/formats/xml/xml.cpp: Add call to xmlInitParser() to support
+	the use of xml formats in multithreaded environments.
+
 2010-03-08  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/formats/mdlformat.cpp: Check atom symbols for isotopes like
