* src/forcefields/forcefielduff.cpp: Patch from Philipp Rumpf to         fix 5-coordinate axial atom detection. Also fix PR##2971473 for         planar SO3 molecules.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3642 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-03-17  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/forcefields/forcefielduff.cpp: Patch from Philipp Rumpf to
+	fix 5-coordinate axial atom detection. Also fix PR##2971473 for
+	planar SO3 molecules.
+
 2010-03-15  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/ops/unique.cpp: Fix #ifdefs to compile on GCC 4.0
