Segregate failures in inchiwrite test
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3650 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2010-03-23 Chris Morley
+	
+	Segregate the molecules that failed inchiwrite so that there are
+	no failures using Samples.txt but all fail with SamplesFail.txt.
+	Similarly with SamplesTechManFail.txt. The majority of failures
+	are stereochemistry.
+	 
+	* include/openbabel/alias.h, src/alias.cpp: reorganize the error
+	messages in ExpandAlias. 
+
+	* src/formats/mdlformat.cpp: changes in description so GUI displays
+	options better.
+
 2010-03-19  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* include/openbabel/obmolecformat.h, src/ops/unique.cpp: Fix
