Make --separate work with multiple input molecules. Fixes #2961144
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3657 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-26 Chris Morley
+
+	* src/obmolecformat.cpp: Make --separate work with multiple input
+	  molecules. Fixes #2961144
+
 2010-03-23 Chris Morley
 	
 	Segregate the molecules that failed inchiwrite so that there are
