* include/openbabel/base.h: Fix "unused parameter" warnings for GCC.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3659 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-27  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* include/openbabel/base.h: Fix "unused parameter" warnings for GCC.
+
 2010-03-26 Chris Morley
 
 	* src/obmolecformat.cpp: Make --separate work with multiple input
