* src/mol.cpp (SetCoordinates): Fix bug in SetCoordinates -- copy         from externally-supplied double* to _c. Renamed parameter to avoid         this problem. Fixes PR#2975148. Thanks to Paul Mortenson.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3661 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-03-29  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/mol.cpp (SetCoordinates): Fix bug in SetCoordinates -- copy
+	from externally-supplied double* to _c. Renamed parameter to avoid
+	this problem. Fixes PR#2975148. Thanks to Paul Mortenson.
+
 2010-03-27  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* include/openbabel/base.h: Fix "unused parameter" warnings for GCC.
