Scrollbar added to GUI
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3667 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-04-04 Chris Morley
+
+	* src/GUI/OBGUI.cpp,src/GUI/OBGUI.h: add a scrollbar on the options
+	panel, so that the GUI can be used with wide, shallow windows (an
+	unfortunate current fashion).
+
 2010-04-01 Chris Morley
 
 	* windows-vc2008: Add new Distribution folder and copy the external
