In fpt format add option to output hexadecimal fingerprints only.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3672 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-07  Chris Morley
+
+	* src/formats/fingerprintformat.cpp: add option to output
+	hexadecimal fingerprints only, as requested by Francesco Napolitano. 
+
 2010-04-07  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/dlhandler_unix.cpp (findFiles): Don't split on tabs or
