Improved parsing of plugindefines.txt
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3690 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-04-20  Chris Morley
+
+	* src/ops/loader.cpp: parse of plugindefines.txt  to allow # as
+	a comment and # in a SMARTS string to coexist.
+	
+	* data/plugindefines.txt: add some simple SmartsDescriptors.
+	
 2010-04-12  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* include/openbabel/generic.h: Remove dangerous loop iterator
