Removed leftover references to OBPartialCharge (now OBChargeModel)
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3694 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-20  Jiahao Chen <jiahao@mit.edu>
+
+        * src/charges/mmff94.cpp, src/charges/gasteiger.cpp: Fixed leftover
+	references to OBPartialCharge (now OBChargeModel)
+
 2010-04-21  Noel O'Boyle
 
 	* scripts/CMakeLists.txt: Edit variables to correspond to Konstantin's
