* src/ops/partialcharges.cpp: Add operation to calculate partial         charges using any charge method, e.g., --partialcharge qeq.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3702 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-04-28  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/ops/partialcharges.cpp: Add operation to calculate partial
+	charges using any charge method, e.g., --partialcharge qeq.
+
+	* src/CMakeLists.txt: Add it.
+
 2010-04-26  Noel O'Boyle
 
 	* test/CMakeLists.txt, test/testbindings.py, test/test_pybel.py:
