* include/openbabel/tokenst.h: Add missing <sstream> header.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3709 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-06  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* include/openbabel/tokenst.h: Add missing <sstream> header.
+
 2010-05-06  Chris Morley
 
 	* include/openbabel/tokenst.h: Add utility function toString()
