Add option to remove all but the largest contiguous fragment
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3713 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-05-07  Chris Morley
+
+	* src/transform.cpp: Add option suggested by Noel:
+	-r Remove all but the largest contiguous fragment
+	(StripSalts)
+	
 2010-05-07  Noel O'Boyle
 
 	* src/builder.cpp: Treat 2D structures like 0D structures.
