* src/formats/xml/cmlformat.cpp: Add support for reading and writing of custom labels, colors, and radii of atoms
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3738 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-18  Konstantin Tokarev  <annulen@yandex.ru>
+
+    * src/formats/xml/cmlformat.cpp: Add support for reading and writing
+    of custom labels, colors, and radii of atoms
+
 2010-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/formats/mol2format.cpp: Add support for reading charge model
