* CMakeLists.txt, src/CMakeLists.txt: Re-enable support for Cygwin. I 	just needed to change Cygwin to use dlhandler_unix.cpp instead of 	dlhandler_win32.cpp. (Note to self: need to sort out Mingw now, and 	then remove Cygwin specific code from dlhandler_win32.cpp
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3742 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-05-22  Noel O'Boyle
+
+	* CMakeLists.txt, src/CMakeLists.txt: Re-enable support for Cygwin. I
+	just needed to change Cygwin to use dlhandler_unix.cpp instead of
+	dlhandler_win32.cpp. (Note to self: need to sort out Mingw now, and
+	then remove Cygwin specific code from dlhandler_win32.cpp)
+
 2010-05-20  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* CMakeLists.txt, src/formats/CMakeLists.txt: Fix support for
