Made a Config file (and friends) suitable for installation.
This still needs more testing, and probably more variables to be
exported. A version of the file is now configured for the install tree
too, with exported CMake targets.

git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3749 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-05-23  Marcus D. Hanwell <marcus@cryos.org>
 
+	* CMakeLists.txt, OpenBabel2Config.cmake.in, src/CMakeLists.txt,
+	src/formats/inchi103/CMakeLists.txt: Make and configure a config file
+	suitable for installation too.
+
 	* include/openbabel/reaction.h: Fixed a compilation failure I
 	was hitting with GCC 4.5, std::tr1::shared_ptr was not found.
 
