--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-04  Chris Morley
+
+	* src/obconversion.cpp(~OBConversion): corrected memory leak caused by
+	line end buffer as suggested by runz. Fixes half of bug #2992369.
+
 2010-06-03  Noel O'Boyle
 
 	* Set svn:eol-style to native for all text files.
