src/graphsym.cpp: Fix memory leak (use of 'new' without corresponding 'delete')
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3780 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-11  Noel O'Boyle
+
+	* src/graphsym.cpp: Fix memory leak (use of 'new' without
+	corresponding 'delete')
+
 2010-06-11  Chris Morley
 
 	* src/descriptor.cpp(ParsePredicate): Before doing a numeric comparison,
