windows-vc2008/*default_build.bat: Add quotation marks around %CD% to handle case where path to current directory contains a space
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3781 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2010-06-11  Noel O'Boyle
 
+	* windows-vc2008/*default_build.bat: Add quotation marks around %CD%
+	to handle case where path to current directory contains a space.
+
+2010-06-11  Noel O'Boyle
+
 	* src/graphsym.cpp: Fix memory leak (use of 'new' without
 	corresponding 'delete')
 
