Make space group import more flexible.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3782 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-13  Jean Brefort  <jean.brefort@normalesup.org>
+
+	* src/math/spacegroup.cpp: make import more flexible.
+
 2010-06-11  Noel O'Boyle
 
 	* windows-vc2008/*default_build.bat: Add quotation marks around %CD%
