* src/obconversion.cpp: Applying Tim's patch to fix memory leak
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3783 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-13  Noel O'Boyle
+
+	* src/obconversion.cpp: Applying Tim's patch to fix memory leak
+
 2010-06-13  Jean Brefort  <jean.brefort@normalesup.org>
 
 	* src/math/spacegroup.cpp: make import more flexible.
