* src/formats/pdbformat.cpp: Applying Richard Hall's patch to fix handling of CONECT records where bond order was split over two lines.	This can occur, for example, with the sulfur in RS(=O)(=O)R'.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3784 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2010-06-13  Noel O'Boyle
 
+	* src/formats/pdbformat.cpp: Applying Richard Hall's patch to fix
+	handling of CONECT records where bond order was split over two lines.
+	This can occur, for example, with the sulfur in RS(=O)(=O)R'.
+
+2010-06-13  Noel O'Boyle
+
 	* src/obconversion.cpp: Applying Tim's patch to fix memory leak
 
 2010-06-13  Jean Brefort  <jean.brefort@normalesup.org>
