Added warning message when reading misformed MDL files with too many atoms or bonds.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3796 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-19  Chris Morley
+
+	* src/formats/mdlformat.cpp: Added warning message when reading
+	misformed files with too many atoms or bonds. Bug #2971865
+
 2010-06-18  Noel O'Boyle
 
 	* doc/Doxyfile.in: Update to Doxygen 1.7.0 and turn SEARCHENGINE on.
