* src/builder.cpp: Fix bug when correcting tet stereo where there is an Implicit H
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3799 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-21  Noel O'Boyle
+
+	* src/builder.cpp: Fix bug when correcting tet stereo where there is
+	an Implicit H
+
 2010-06-20  Noel O'Boyle
 
 	* src/formats/pdbformat.cpp: the_res not NULL-terminated. Resulted in
