* src/kekulize.cpp, include/openbabel/mol.h: Fix compilation errors with MSVC (and replace some Tabs with whitespace)
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3807 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-23  Noel O'Boyle
+
+	* src/kekulize.cpp, include/openbabel/mol.h: Fix compilation errors
+	with MSVC (and replace some Tabs with whitespace)
+
 2010-06-23  Tim Vandermeersch
 
         * src/ring.cpp: LSSR selection seems to work now. It is based on
